# imagegen-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: ci.yml
homebrew/: imagegen.rb
skill/: SKILL.md
src/: api.rs  auth.rs  main.rs  output.rs
