[package]
name = "imagegen"
version = "0.2.0"
edition = "2021"
description = "Fast, agent-friendly CLI for OpenAI image generation (gpt-image-2)"
license = "MIT"
repository = "https://github.com/chrischabot/imagegen-cli"
readme = "README.md"
keywords = ["openai", "image-generation", "cli", "gpt-image", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
